openshift/components/cosmoformer/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosmoformer-frontend-deployment
  namespace: cosmoformer-app
  labels:
    app: cosmoformer
    layer: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cosmoformer
      layer: frontend
  template:
    metadata:
      labels:
        app: cosmoformer
        layer: frontend
    spec:
      containers:
      - name: cosmoformer-frontend
        image: quay.io/rhit_asultano/cosmoformer-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: "10m"
            memory: "30Mi"
          limits:
            cpu: "2"
            memory: "4Gi"
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
